--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>bridgeq - 1.0.0-SNAPSHOT</title>
+    <title>Welcome to Your Quarkus Application</title>
     <style>
         h1, h2, h3, h4, h5, h6 {
             margin-bottom: 0.5rem;
@@ -20,7 +20,6 @@
 
         h3 {
             font-size: 1.75rem
-
         }
 
         h4 {
@@ -44,7 +43,7 @@
             font-size: 2.7rem;
             margin: 0;
             padding: 2rem 1rem;
-            background-color: #0d1c2c;
+            background-color: #00A1E2;
             color: white;
         }
 
@@ -91,19 +90,11 @@
         }
 
         .right-section ul {
-            border-left: 0.3rem solid #71aeef;
+            border-left: 0.3rem solid #00A1E2;
             list-style-type: none;
             padding-left: 0;
         }
 
-        .provided-code {
-            border-left: 0.3rem solid #71aeef;
-            padding-left: 10px;
-        }
-
-        .provided-code h3 {
-            font-weight: 200;
-        }
     </style>
 </head>
 <body>
@@ -114,60 +105,33 @@
 
 <div class="container">
     <div class="left-column">
-        <p class="lead"> Congratulations, you have created a new Quarkus cloud application.</p>
+        <p class="lead"> Congratulations, you have created a new Quarkus application.</p>
 
-        <h2>What is this page?</h2>
+        <h2>Why do you see this?</h2>
 
         <p>This page is served by Quarkus. The source is in
             <code>src/main/resources/META-INF/resources/index.html</code>.</p>
 
-        <h2>What are your next steps?</h2>
+        <h2>What can I do from here?</h2>
 
-        <p>If not already done, run the application in <em>dev mode</em> using: <code>./mvnw compile quarkus:dev</code>.
+        <p>If not already done, run the application in <em>dev mode</em> using: <code>mvn quarkus:dev</code>.
         </p>
         <ul>
+            <li>Add REST resources, Servlets, functions and other services in <code>src/main/java</code>.</li>
             <li>Your static assets are located in <code>src/main/resources/META-INF/resources</code>.</li>
             <li>Configure your application in <code>src/main/resources/application.properties</code>.</li>
-            <li>Quarkus now ships with a <a href="/q/dev/">Dev UI</a> (available in dev mode only)</li>
-            <li>Play with the provided code located in <code>src/main/java</code>:</li>
         </ul>
-                <div class="provided-code">
-            <h3>WebSockets example using Undertow</h3>
-            <p>Discover WebSockets using Undertow with this cool supersonic chat example. Open multiple tabs to simulate different users.</p>
-            <p><code>@Path: <a href="/supersonic-chat.html" class="path-link" target="_blank">/supersonic-chat.html</a></code></p>
-            <p><a href="https://quarkus.io/guides/websockets" class="guide-link" target="_blank">Related guide section...</a></p>
-        </div>
 
+        <h2>How do I get rid of this page?</h2>
+        <p>Just delete the <code>src/main/resources/META-INF/resources/index.html</code> file.</p>
     </div>
     <div class="right-column">
         <div class="right-section">
-            <h3>Application</h3>
+            <h3>Next steps</h3>
             <ul>
-                <li>GroupId: <code>life.genny</code></li>
-                <li>ArtifactId: <code>bridgeq</code></li>
-                <li>Version: <code>1.0.0-SNAPSHOT</code></li>
-                <li>Quarkus Version: <code>2.2.3.Final</code></li>
-            </ul>
-        </div>
-        <div class="right-section">
-            <h3>Do you like Quarkus?</h3>
-            <ul>
-                <li>Go give it a star on <a href="https://github.com/quarkusio/quarkus">GitHub</a>.</li>
-            </ul>
-        </div>
-        <div class="right-section">
-            <h3>Selected extensions guides</h3>
-            <ul>
-                <li title="WebSocket communication channel support"><a href="https://quarkus.io/guides/websockets" target="_blank">WebSockets guide</a></li>
-            </ul>
-        </div>
-        <div class="right-section">
-            <h3>More reading</h3>
-            <ul>
-                <li><a href="https://quarkus.io/guides/maven-tooling.html" target="_blank">Setup your IDE</a></li>
-                <li><a href="https://quarkus.io/guides/getting-started.html" target="_blank">Getting started</a></li>
-                <li><a href="https://quarkus.io/guides/" target="_blank">All guides</a></li>
-                <li><a href="https://quarkus.io" target="_blank">Quarkus Web Site</a></li>
+                <li><a href="https://quarkus.io/guides/maven-tooling.html">Setup your IDE</a></li>
+                <li><a href="https://quarkus.io/guides/getting-started.html">Getting started</a></li>
+                <li><a href="https://quarkus.io">Quarkus Web Site</a></li>
             </ul>
         </div>
     </div>
